force-app/main/default/objects/Pod_Member__c/Pod_Member__c.object-meta.xml
<CustomObject>
    <label>Pod Member</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pod Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>