force-app/main/default/objects/Pod_Member__c/fields/Row_Type__c.field-meta.xml
<CustomField>
    <fullName>Row_Type__c</fullName>
    <label>Row Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>