force-app/main/default/objects/Pod_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Row_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Icon_Style__c</columns>
    <columns>Image_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pod Members</label>
</ListView>